added grid variant support #28

--- a/demo/index.html
+++ b/demo/index.html
@@ -65,6 +65,11 @@
               <input class="form-check-input" type="checkbox" id="performPostProcessing" checked>
               <label class="form-label" for="performPostProcessing">Perform Post Processing</label>
             </div>
+
+            <div class="row">
+              <input class="form-check-input" type="checkbox" id="useFRGridVariant" checked>
+              <label class="form-label" for="useFRGridVariant">Use Grid Variant</label>
+            </div>
   
             <div class="row">
               <input class="form-check-input" type="checkbox" id="displayInitialPositions">
