made compounds transparent - included labels in dimensions - text wrapped

--- a/demo/index.html
+++ b/demo/index.html
@@ -304,7 +304,7 @@
                   <label class="form-label" for="nodeDimensionsIncludeLabels">nodeDimensionsIncludeLabels</label>
                 </td>
                 <td>
-                  <input class="form-check-input" type="checkbox" value="false" id="nodeDimensionsIncludeLabels" checked>
+                  <input class="form-check-input" type="checkbox" value="true" id="nodeDimensionsIncludeLabels" checked>
                 </td>
               </tr>
             </tbody>
