added remove label button

--- a/demo/index.html
+++ b/demo/index.html
@@ -149,6 +149,10 @@
             <div class="row">
               <button title="Delete Selected Items" onclick="deleteSelected()">Delete Selected</button>
             </div>
+
+            <div class="row">
+              <button title="Remove Node Labels" onclick="removeLabels()">Remove Node Labels</button>
+            </div>
   
             <div class="row">
               <label title="Max Width and Height Value" class="form-label" for="maxWH">Max Random Width/Height </label>
