correct js file name and sample files

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,7 +27,7 @@
     <script src="./cytoscape-layvo.js"></script>
     <script src="./test.js"></script>
     <script src="./unix.js"></script>
-    <script src="./callgraph.js"></script>
+    <script src="./callGraph.js"></script>
     <script src="./index.js"></script>
     
     
