--- a/demo/index.html
+++ b/demo/index.html
@@ -167,11 +167,11 @@
             </div>
           </div>
 
-          <button class="accordion">Cose/Dagre Layout</button>
+          <button class="accordion">CoSE/Dagre Layout</button>
           <div class="panel">
             <div class="row">
-              <button title="Run Cose" onclick="runCose()">CoSE</button>
-              <button title="Run Cose Animated" onclick="runCoseAnimated()">CoSE Animated</button>
+              <button title="Run CoSE" onclick="runCose()">CoSE</button>
+              <button title="Run CoSE Animated" onclick="runCoseAnimated()">CoSE Animated</button>
               <button title="Run Dagre" onclick="runDagre()">Dagre</button>
             </div>
           </div>
